--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 ---
----
 # We need sudo for some of the Docker commands.
 sudo: required
 
@@ -15,7 +14,7 @@ services:
 
 # Pull the image from Docker Hub for the OS under test.
 before_install:
-  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
+  - 'sudo docker pull geerlingguy/docker-${distro}-ansible:latest'
 
 # Start the container from the image and perform tests.
 script:
@@ -23,7 +22,7 @@ script:
   - container_id=$(mktemp)
 
   # Run container detached, with our role mounted inside.
-  - 'docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
+  - 'sudo docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
 
   - >
     docker exec --tty "$(cat ${container_id})" env TERM=xterm
